[Misc] Remove deprecated call